# Creek

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
docs/: TODO.md
src/: main.js  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: git_commands.rs  mod.rs  recording_commands.rs  todo_commands.rs  workspace_commands.rs
src-tauri/src/models/: event.rs
src-tauri/src/modules/: document_service.rs  git_manager.rs  intent_router.rs  mod.rs  rag.rs  state_manager.rs  todo_agent.rs  tool_extension.rs  workspace_manager.rs
src-tauri/src/modules/agents/: mod.rs  rag_agent.rs  search_agent.rs
src-tauri/src/modules/agents/editor/: append_agent.rs  clear_agent.rs  edit_agent.rs  grep_agent.rs  mod.rs  undo_agent.rs
src-tauri/src/modules/pipeline/: auto_naming.rs  mod.rs  state_updater.rs  transcript_processor.rs  types.rs  utils.rs
src-tauri/src/prompts/: auto_naming.rs  document_editing.rs  intent_router.rs  mod.rs  rag.rs  state_manager.rs  todo_agent.rs
src-tauri/src/services/: asr_service.rs  llm_client.rs  mod.rs
src-tauri/src/utils/: diff.rs  mod.rs  paths.rs  text.rs
src/api/: commands.js  events.js
src/components/: ClipboardCheckIcon.vue  CollapsiblePanel.vue  GitHistoryManager.vue  LiveCanvas.vue  RenameModal.vue  SearchResultsPanel.vue  Sidebar.vue  ThinkingStar.vue  ThinkingToast.vue  Toast.vue  TodoManager.vue
src/components/workspace/: WorkspaceSidebar.vue  (+1 more)
src/router/: index.js
src/views/: HomeView.vue  NotFound.vue  WelcomeView.vue  WorkspaceManagementView.vue  WorkspaceView.vue
utils/: resize.py
