[package]
name = "creek"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "creek_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
tauri-plugin-store = "2.4.2"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
async-tungstenite = { version = "0.32.1", features = ["tokio-runtime", "tokio-native-tls"] }
cpal = "0.17.1"
url = "2.5.8"
uuid = { version = "1.19.0", features = ["v4"] }
base64 = "0.22.1"
futures-util = "0.3.31"
async-trait = "0.1.89"
http = "1.4.0"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
dotenv = "0.15.0"
colored = "3.0.0"
tokio-util = "0.7.18"
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2.6.0"
chrono = "0.4.43"
sha2 = "0.10.9"
git2 = "0.19"
rusqlite = { version = "0.32", features = ["bundled"] }
fastembed = "5.8.1"
lancedb = "0.23.1"
arrow-schema = "56"
arrow-array = "56"
regex = "1.12.2"
tauri-plugin-log = "2.8.0"

[dev-dependencies]
tempfile = "3.24.0"
